[tool.poetry]
name = "cobnut"
version = "0.1.0"
description = "Easy data cache management"
readme = "README.md"
authors = ["JeremyAndress <jeremysilvasilva@gmail.com>"]
license = "MIT"
homepage = "https://github.com/JeremyAndress/cobnut"
repository = "https://github.com/JeremyAndress/cobnut"

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.5.3"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
