[tool.poetry]
name = "cobnut"
version = "0.1.1"
description = "Easy data cache management"
readme = "README.md"
authors = ["JeremyAndress <jeremysilvasilva@gmail.com>"]
license = "MIT"
homepage = "https://github.com/JeremyAndress/cobnut"
repository = "https://github.com/JeremyAndress/cobnut"

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.7.3"
redis = {version = "^3.5.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
